[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi bore.
+            Good morning New York!
+            <h3> This is a beautiful city..</h3>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
